Truncation for resource descripions, fixed heights

--- a/app/assets/stylesheets/assesment.css.scss
+++ b/app/assets/stylesheets/assesment.css.scss
@@ -2,20 +2,7 @@
 
 .process {
   list-style-type: none;
-  margin: 30px 0;
+  margin: 20px 0;
 
-  li {
-    margin: 0 0 5px 0;
-
-    /* This will be needed for the next iteration with the pictures.
-    height: 115px;
-    img {
-      float: left;
-      clear: both;
-      margin: 0 30px 10px 0;
-      border: 1px solid $light-gray;
-    }
-    */
-    
-  }
+  li { margin: 0 0 5px 0;  }
 }
