--- a/app/assets/stylesheets/resources_search.css.scss
+++ b/app/assets/stylesheets/resources_search.css.scss
@@ -57,7 +57,7 @@
                   cursor: help;
                 }
              }
-
+            .holder { width: 300px;}
             span {
              float:left;
              padding-bottom: 5px;    
@@ -85,7 +85,7 @@
   li {
     list-style-type: none;
     margin: 20px 0px;
-    height: 150px;
+    height: 170px;
     a {
       font-size: 20px;
       text-decoration: none;
